--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="11dp"
     android:orientation="vertical"
-    tools:context="adaz.urbantick_ibratec.MainActivity">
+    tools:context="adaz.urbantick_ibratec.Gui.MainActivity">
     
     <ImageView
         android:layout_width="wrap_content"
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editSenha"
-        android:inputType="numberPassword"/>
+        android:inputType="textPassword"/>
 
     <Button
         android:id="@+id/btnEntrar"
