--- a/app/src/main/res/layout/activity_fornecedor_lista.xml
+++ b/app/src/main/res/layout/activity_fornecedor_lista.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="11dp"
-    android:orientation="vertical"
-    tools:context="adaz.urbantick_ibratec.Gui.FornecedorListaActivity">
+    android:layout_height="match_parent">
 
-    <ListView
+    <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listFornecedor">
-    </ListView>
+        android:name="adaz.urbantick_ibratec.FornecedorListaActivity"
+        android:id="@+id/listFragment"/>
 
-</LinearLayout>
+</FrameLayout>
