--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,15 +46,13 @@
         android:background="#1b1b1b"
         android:text="@string/txtEntrar"
         android:textColor="#FFFFFF"
-        android:textSize="20dp"
-        android:onClick="doLogin"/>
+        android:textSize="20dp"/>
 
     <TextView
         android:id="@+id/txtLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/progressBar"/>
+        android:layout_centerHorizontal="true" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
