--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,5 +3,5 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:background="@mipmap/ic_launcher">
+    android:background="@drawable/splashscreen">
 </RelativeLayout>
