--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#363636</color>
-    <color name="colorPrimaryDark">#1C1C1C</color>
-    <color name="colorAccent">#FF7F00</color>
+    <color name="colorPrimary">#f2de4d</color>
+    <color name="colorPrimaryDark">#E0E0E0</color>
+    <color name="colorAccent">#FFF</color>
+    <color name="black">#000000</color>
+    <color name="gray800">#424242</color>
+    <color name="gray900">#212121</color>
+    <color name="gray">#E0E0E0</color>
 
     <color name="bg_login">#26ae90</color>
     <color name="bg_register">#2e3237</color>
