--- a/app/src/main/res/menu/outros.xml
+++ b/app/src/main/res/menu/outros.xml
@@ -14,7 +14,7 @@
 
        <item
        android:id="@+id/action_opcao3"
-       android:icon="@android:drawable/ic_menu_send"
+       android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/opcao3" />
 
        <item
