--- a/app/src/main/res/layout/activity_esqueceu_senha.xml
+++ b/app/src/main/res/layout/activity_esqueceu_senha.xml
@@ -1,19 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:padding="11dp"
+android:orientation="vertical"
+tools:context="adaz.urbantick_ibratec.Gui.EsqueceuSenhaActivity">
 
-    <EditText
-        android:id="@+id/editEmail2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Informe seu email" />
+<ImageView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:scaleType="centerCrop"
+    android:layout_gravity="center"
+    android:src="@mipmap/urbantick_trasnp"/>
 
-    <Button
-        android:id="@+id/btnEsqueceuSenha"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Recuperar senha" />
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/txtEmail"
+    android:layout_marginTop="15dp"/>
+
+<EditText
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/editEmail2"/>
+
+<Button
+    android:id="@+id/btnEsqueceuSenha"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="70dp"
+    android:background="#1b1b1b"
+    android:text="@string/txtRedefenirSenha"
+    android:textColor="#FFFFFF"
+    android:textSize="20dp"/>
+
+
+<ProgressBar
+    style="?android:attr/progressBarStyleLarge"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/progressBarMain"
+    android:layout_centerInParent="true"
+    android:visibility="gone"/>
+
+
 </LinearLayout>
