--- a/app/src/main/res/layout/linha.xml
+++ b/app/src/main/res/layout/linha.xml
@@ -22,7 +22,8 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Categoria"
-            android:id="@+id/txtCategoria" />
+            android:id="@+id/txtCategoria"
+            android:layout_weight="4" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -30,6 +31,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Telefone"
             android:id="@+id/txtTelefone"
+            android:layout_weight="1"
             android:layout_gravity="end"
             android:textAlignment="textEnd" />
     </LinearLayout>
