--- a/app/src/main/res/layout/activity_gui.xml
+++ b/app/src/main/res/layout/activity_gui.xml
@@ -53,7 +53,7 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@color/colorPrimary"
+                            android:background="@color/colorPrimaryDark"
                             android:orientation="vertical">
 
                             <ImageView
@@ -67,7 +67,7 @@
                                 android:layout_height="@dimen/height_button_main_screen"
                                 android:gravity="center"
                                 android:text="@string/buscar"
-                                android:textColor="@color/white"
+                                android:textColor="@color/black"
                                 android:textSize="@dimen/text_size_main_screen"
                                 android:textStyle="bold" />
                         </LinearLayout>
@@ -87,7 +87,7 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@color/colorPrimary"
+                            android:background="@color/colorPrimaryDark"
                             android:orientation="vertical">
 
                             <ImageView
@@ -101,7 +101,7 @@
                                 android:layout_height="@dimen/height_button_main_screen"
                                 android:gravity="center"
                                 android:text="@string/fornecedor"
-                                android:textColor="@color/white"
+                                android:textColor="@color/black"
                                 android:textSize="@dimen/text_size_main_screen"
                                 android:textStyle="bold" />
                         </LinearLayout>
@@ -172,10 +172,10 @@
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/height_button_main_screen"
-                                android:background="@color/colorPrimary"
+                                android:background="@color/colorPrimaryDark"
                                 android:gravity="center"
                                 android:text="@string/mapa"
-                                android:textColor="@color/white"
+                                android:textColor="@color/black"
                                 android:textSize="@dimen/text_size_main_screen"
                                 android:textStyle="bold" />
                         </LinearLayout>
