--- a/app/src/main/res/layout/activity_consulta.xml
+++ b/app/src/main/res/layout/activity_consulta.xml
@@ -4,9 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="11dp"
     android:orientation="vertical"
     tools:context="adaz.urbantick_ibratec.Gui.ConsultaActivity">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
 
     <TextView
         android:layout_width="match_parent"
@@ -60,7 +64,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
-        android:background="#1b1b1b"
+        android:background="#000"
         android:text="@string/txtBuscar"
         android:textColor="#FFFFFF"
         android:textSize="20dp"
