--- a/app/src/main/res/layout/activity_gui.xml
+++ b/app/src/main/res/layout/activity_gui.xml
@@ -34,153 +34,21 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin">
 
-                <LinearLayout
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerCrop"
+                    android:layout_gravity="center"
+                    android:src="@mipmap/urbantick_trasnp"/>
+
+                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:text="Seja bem vindo!\n Para navegar no app, vá ao Menu lateral"
+                    android:textAlignment="center"
+                    android:layout_marginTop="15dp"/>
 
-                    <android.support.v7.widget.CardView
-                        android:id="@+id/button_buscar"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/margin_cards"
-                        android:layout_marginRight="@dimen/margin_cards"
-                        android:layout_weight="1"
-                        android:onClick="buscarFornecedor"
-                        card_view:cardCornerRadius="5dp"
-                        card_view:cardElevation="2dp">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@color/colorPrimary"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/height_image_main_screen"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/buscar" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/height_button_main_screen"
-                                android:gravity="center"
-                                android:text="@string/buscar"
-                                android:textColor="@color/white"
-                                android:textSize="@dimen/text_size_main_screen"
-                                android:textStyle="bold" />
-                        </LinearLayout>
-                    </android.support.v7.widget.CardView>
-
-                    <android.support.v7.widget.CardView
-                        android:id="@+id/button_fornecedor"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/margin_cards"
-                        android:layout_marginLeft="@dimen/margin_cards"
-                        android:layout_weight="1"
-                        android:onClick="listaFornecedor"
-                        card_view:cardCornerRadius="5dp"
-                        card_view:cardElevation="2dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@color/colorPrimary"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/height_image_main_screen"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/fornecedor" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/height_button_main_screen"
-                                android:gravity="center"
-                                android:text="@string/fornecedor"
-                                android:textColor="@color/white"
-                                android:textSize="@dimen/text_size_main_screen"
-                                android:textStyle="bold" />
-                        </LinearLayout>
-                    </android.support.v7.widget.CardView>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <android.support.v7.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/margin_cards"
-                        android:layout_marginTop="@dimen/margin_cards"
-                        android:layout_weight="1"
-                        android:onClick="metricas"
-                        card_view:cardCornerRadius="5dp"
-                        card_view:cardElevation="2dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@color/colorPrimary"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/height_image_main_screen"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/metricas" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/height_button_main_screen"
-                                android:gravity="center"
-                                android:text="@string/metricas"
-                                android:textColor="@color/white"
-                                android:textSize="@dimen/text_size_main_screen"
-                                android:textStyle="bold" />
-                        </LinearLayout>
-                    </android.support.v7.widget.CardView>
-
-                    <android.support.v7.widget.CardView
-                        android:id="@+id/button_mapa"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="@dimen/margin_cards"
-                        android:layout_marginTop="@dimen/margin_cards"
-                        android:layout_weight="1"
-                        android:onClick="mapaFornecedores"
-                        card_view:cardCornerRadius="5dp"
-                        card_view:cardElevation="2dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@color/gray"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/height_image_main_screen"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/mapa" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="@dimen/height_button_main_screen"
-                                android:background="@color/colorPrimary"
-                                android:gravity="center"
-                                android:text="@string/mapa"
-                                android:textColor="@color/white"
-                                android:textSize="@dimen/text_size_main_screen"
-                                android:textStyle="bold" />
-                        </LinearLayout>
-                    </android.support.v7.widget.CardView>
-                </LinearLayout>
             </LinearLayout>
         </ScrollView>
         <FrameLayout
