--- a/app/src/main/res/layout/activity_detalhes_fornecedor.xml
+++ b/app/src/main/res/layout/activity_detalhes_fornecedor.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -74,4 +75,14 @@
         android:textColor="#FFFFFF"/>
 
 
+
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="30dp"
+        tools:context="adaz.urbantick_ibratec.Gui.DetalhesFornecedorActivity" />
+
 </LinearLayout>
+
