--- a/app/src/main/res/layout/activity_detalhes_fornecedor.xml
+++ b/app/src/main/res/layout/activity_detalhes_fornecedor.xml
@@ -51,36 +51,29 @@
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
-    <TextView
-        android:id="@+id/tv_favorito"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
     <RatingBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/rtbPontuacao"
         android:stepSize="0.5"
-        android:numStars="5"
-        android:layout_gravity="center_horizontal" />
+        android:numStars="5" />
 
     <Button
         android:id="@+id/btn_salvar_pontuacao"
-        android:layout_width="195dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="105dp"
-        android:layout_marginTop="@dimen/button_margin"
-        android:background="#000"
-        android:text="Clique aqui para avaliar"
-        android:textColor="#FFFFFF"/>
+        android:layout_width="109dp"
+        android:layout_height="40dp"
+        android:layout_gravity="right"
+        android:layout_marginTop="-50dp"
+        android:textColor="@android:color/black"
+        android:text="Avaliar\nFornecedor"
+        android:background="#FFF"/>
 
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="30dp"
         tools:context="adaz.urbantick_ibratec.Gui.DetalhesFornecedorActivity" />
 
 </LinearLayout>
-
